Fix up hero image alignment.

--- a/asset/scss/onthesegrounds.scss
+++ b/asset/scss/onthesegrounds.scss
@@ -238,7 +238,7 @@ body.home .page-title {
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-content: center;
 }
 
 .hero.shape-1 .asset {
